<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity" >

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/login_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="50dp"
                    android:layout_marginTop="50dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/Benvingut"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="40sp"
                        android:textStyle="italic" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/a_eMuseum"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="35sp"
                        android:textStyle="italic" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/login_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/login_frame"
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:visibility="gone" >

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <EditText
                            android:id="@+id/login_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:alpha="1"
                            android:ems="10"
                            android:gravity="center_horizontal"
                            android:hint="@string/splash_login_usuari"
                            android:inputType="text" >

                            <requestFocus />
                        </EditText>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <EditText
                            android:id="@+id/login_password"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:alpha="1"
                            android:ems="10"
                            android:gravity="center_horizontal"
                            android:hint="@string/splash_login_contrasenya"
                            android:inputType="textPassword" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <TextView
                            android:id="@+id/textView_recuperarPass"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="3dp"
                            android:text="@string/recuperarPass"
                            android:textColor="@color/login_blue_pressed"
                            android:layout_centerHorizontal="true"
                            android:textSize="12sp" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" >

                        <Button
                            android:id="@+id/loginButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/login_login_selector"
                            android:minHeight="40dp"
                            android:paddingLeft="30dp"
                            android:paddingRight="30dp"
                            android:text="@string/splash_entrar"
                            android:textColor="@color/white" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/loading_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/login_frame"
                    android:orientation="vertical"
                    android:padding="15dp" >

                    <ProgressBar
                        android:id="@+id/splash_loading"
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </RelativeLayout>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/login_register_bar"
        android:orientation="horizontal"
        android:weightSum="1" >

        <Button
            android:id="@+id/splash_registrarse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:layout_weight="0.5"
            android:background="@drawable/login_register_selector"
            android:minHeight="40dp"
            android:padding="5dp"
            android:text="@string/splash_registrat"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/botoOmetre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_weight="0.5"
            android:background="@drawable/login_skip_selector"
            android:minHeight="40dp"
            android:padding="5dp"
            android:text="@string/splash_entrarSenseLogin"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>