<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecuperarPass">

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/login_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/recuperar_layout_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/login_frame"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/recuperar_email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentLeft="true"
                            android:layout_alignParentTop="true"
                            android:alpha="1"
                            android:ems="10"
                            android:gravity="center_horizontal"
                            android:hint="@string/registrat_email"
                            android:inputType="textEmailAddress" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/loading_layout_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/login_frame"
                    android:orientation="vertical"
                    android:padding="15dp"
                    android:visibility="gone">

                    <ProgressBar
                        android:id="@+id/splash_loading"
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/recuperar_layout_pass"
                    android:layout_alignLeft="@+id/recuperar_layout_pass"
                    android:layout_alignRight="@+id/recuperar_layout_pass"
                    android:fontFamily="sans-serif"
                    android:paddingBottom="20sp"
                    android:lines="2"
                    android:gravity="center"
                    android:text="@string/recuperarContrasenya"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

            </RelativeLayout>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/register_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/login_register_bar"
        android:orientation="horizontal"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/enviar_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/login_register_selector"
                android:gravity="center"
                android:minHeight="60dp"
                android:padding="5dp"
                android:text="@string/enviar_email"
                android:textColor="@color/white" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>